// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content reducer should handle ADD_DETAILS 1`] = `
Object {
  "details": Object {},
  "filter": "TRENDING",
  "genres_array": Array [],
  "isLoading": true,
  "page": 1,
  "pageSize": 20,
  "results": Array [],
  "searchValue": "",
  "total_pages": 0,
  "total_results": 0,
}
`;

exports[`content reducer should handle ADD_GENRES 1`] = `
Object {
  "details": Object {},
  "filter": "TRENDING",
  "genres_array": Array [
    Object {
      "id": 13,
      "name": "Adventure",
    },
    Object {
      "id": 18,
      "name": "Drama",
    },
    Object {
      "id": 20,
      "name": "Family",
    },
    Object {
      "id": 21,
      "name": "Fantasy",
    },
  ],
  "isLoading": true,
  "page": 1,
  "pageSize": 20,
  "results": Array [],
  "searchValue": "",
  "total_pages": 0,
  "total_results": 0,
}
`;

exports[`content reducer should handle ADD_ITEMS 1`] = `
Object {
  "details": Object {},
  "filter": "TRENDING",
  "genres_array": Array [],
  "isLoading": false,
  "page": 1,
  "pageSize": 20,
  "results": Array [],
  "searchValue": "",
  "total_pages": 12,
  "total_results": 55,
}
`;

exports[`content reducer should handle SET_CURRENT_PAGE 1`] = `
Object {
  "details": Object {},
  "filter": "TRENDING",
  "genres_array": Array [],
  "isLoading": true,
  "page": undefined,
  "pageSize": undefined,
  "results": Array [],
  "searchValue": "",
  "total_pages": 0,
  "total_results": 0,
}
`;

exports[`content reducer should handle SET_FILTER 1`] = `
Object {
  "details": Object {},
  "filter": "COMINGSOON",
  "genres_array": Array [],
  "isLoading": true,
  "page": 1,
  "pageSize": 20,
  "results": Array [],
  "searchValue": "",
  "total_pages": 0,
  "total_results": 0,
}
`;

exports[`content reducer should handle SET_LOADING 1`] = `
Object {
  "details": Object {},
  "filter": "TRENDING",
  "genres_array": Array [],
  "isLoading": false,
  "page": 1,
  "pageSize": 20,
  "results": Array [],
  "searchValue": "",
  "total_pages": 0,
  "total_results": 0,
}
`;

exports[`content reducer should handle SET_SEARCH_VALUE 1`] = `
Object {
  "details": Object {},
  "filter": "TRENDING",
  "genres_array": Array [],
  "isLoading": true,
  "page": 1,
  "pageSize": 20,
  "results": Array [],
  "searchValue": "test",
  "total_pages": 0,
  "total_results": 0,
}
`;

exports[`content reducer should return the initial state 1`] = `
Object {
  "details": Object {},
  "filter": "TRENDING",
  "genres_array": Array [],
  "isLoading": true,
  "page": 1,
  "pageSize": 20,
  "results": Array [],
  "searchValue": "",
  "total_pages": 0,
  "total_results": 0,
}
`;
